# VPC3-trace-compression-engine

./: .gitignore
VPC3/: .cproject  .project  CMakeLists.txt  main.cpp  readme  testconfig.txt
VPC3/Debug/: VPC3  makefile
VPC3/Debug/src/: FCMPredictor.d  LVPredictor.d  Predictor.d  VPC3.d  main.d  subdir.mk
VPC3/src/: Configuration.cpp  Configuration.h  DFCMPredictor.cpp  DFCMPredictor.h  FCMPredictor.cpp  FCMPredictor.h  InputConfigReader.cpp  InputConfigReader.h  LVPredictor.cpp  LVPredictor.h  Predictor.cpp  Predictor.h  VPC3.cpp  VPC3.h  main.cpp  main.h  readme  test.trace  testconfig.txt  testconfig.zlib  testconfig2.txt  testresconfig.txt
